--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
           </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+          <div class="carousel-item" style="background-image: url('https://health.mil/-/media/Images/MHS/Photos/COVIDgenome.ashx?h=407&la=en&mw=720&w=720&hash=9B1C103F610084A80E73CED933395BDCBFDFDDFF62A799929C9C8AD2C34DE975')">
             <div class="carousel-caption d-none d-md-block">
               <h3>Third Slide</h3>
               <p>This is a description for the third slide.</p>
