--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
           </div>
           <!-- Slide Two - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('https://archive.defense.gov/DODCMSShare/NewsStoryPhoto/2014-05/hrs_140512-D-ZZ999-15908.jpg')">
+          <div class="carousel-item" style="background-image: url('https://live.staticflickr.com/65535/49640655213_e00c2e8bbd_b.jpg')">
             <div class="carousel-caption d-none d-md-block">
               <h3>Second Slide</h3>
               <p>This is a description for the second slide.</p>
