--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
           <!-- Slide One - Set the background image for this slide in the line below -->
           <div class="carousel-item active" style="background-image: url('https://cdn.pixabay.com/photo/2020/03/15/10/30/virus-4933201_960_720.png')">
             <div class="carousel-caption d-none d-md-block">
-              <h3>First Slide</h3>
-              <p>This is a description for the first slide.</p>
+              <h3>SARS-CoV-2</h3>
+              <p>Perteneciente a la familia de los coronavirus, ha causado una pandemia emergente .</p>
             </div>
           </div>
           <!-- Slide Two - Set the background image for this slide in the line below -->
           <div class="carousel-item" style="background-image: url('https://health.mil/-/media/Images/MHS/Photos/COVIDgenome.ashx?h=407&la=en&mw=720&w=720&hash=9B1C103F610084A80E73CED933395BDCBFDFDDFF62A799929C9C8AD2C34DE975')">
             <div class="carousel-caption d-none d-md-block">
-              <h3>Second Slide</h3>
-              <p>This is a description for the second slide.</p>
+              <h3>Comunidad científica</h3>
+              <p>Interesada en el estudio de este virus para llevar a la resolución de este problema mundial de salud pública.</p>
             </div>
           </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
           <div class="carousel-item" style="background-image: url('https://live.staticflickr.com/65535/49640655213_e00c2e8bbd_b.jpg')">
             <div class="carousel-caption d-none d-md-block">
-              <h3>Third Slide</h3>
-              <p>This is a description for the third slide.</p>
+              <h3>Progreso</h3>
+              <p>El esfuerzo conjunto de investigadores ha logrado la dilucidación de la dinámica y estructura del SARS-CoV-2</p>
             </div>
           </div>
         </div>
