--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Full Slider - Start Bootstrap Template</title>
+    <title>Soluciones científicas a problemas emergentes: La vida durante la pandemia</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -60,14 +60,14 @@
           <div class="carousel-item active" style="background-image: url('https://cdn.pixabay.com/photo/2020/03/15/10/30/virus-4933201_960_720.png')">
             <div class="carousel-caption d-none d-md-block">
               <h3>SARS-CoV-2</h3>
-              <p>Perteneciente a la familia de los coronavirus, ha causado una pandemia emergente .</p>
+              <p>Perteneciente a la familia de los coronavirus, de la pandemia emergente en el año en curso</p>
             </div>
           </div>
           <!-- Slide Two - Set the background image for this slide in the line below -->
           <div class="carousel-item" style="background-image: url('https://health.mil/-/media/Images/MHS/Photos/COVIDgenome.ashx?h=407&la=en&mw=720&w=720&hash=9B1C103F610084A80E73CED933395BDCBFDFDDFF62A799929C9C8AD2C34DE975')">
             <div class="carousel-caption d-none d-md-block">
-              <h3>Comunidad científica</h3>
-              <p>Interesada en el estudio de este virus para llevar a la resolución de este problema mundial de salud pública.</p>
+              <h3>La comunidad científica</h3>
+              <p>Comprometida con el estudio de este virus para llevar a la resolución de este problema mundial de salud pública.</p>
             </div>
           </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
