--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">oluciones científicas a problemas emergentes: La vida durante la pandemia</a>
+        <a class="navbar-brand" href="#">Soluciones científicas a problemas emergentes: La vida durante la pandemia</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -35,13 +35,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#">Challenge CdCMx 2020: Proyecto final</a>
             </li>
           </ul>
         </div>
@@ -60,7 +54,7 @@
           <div class="carousel-item active" style="background-image: url('https://cdn.pixabay.com/photo/2020/03/15/10/30/virus-4933201_960_720.png')">
             <div class="carousel-caption d-none d-md-block">
               <h3>SARS-CoV-2</h3>
-              <p>Perteneciente a la familia de los coronavirus, de la pandemia emergente en el año en curso</p>
+              <p>Perteneciente a la familia de los coronavirus, es el responsable de la pandemia emergente en el año en curso</p>
             </div>
           </div>
           <!-- Slide Two - Set the background image for this slide in the line below -->
