--- a/index.html
+++ b/index.html
@@ -30,12 +30,9 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home
+              <a class="nav-link" href="#">Challenge CdCMx 2020: Proyecto final
                 <span class="sr-only">(current)</span>
               </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Challenge CdCMx 2020: Proyecto final</a>
             </li>
           </ul>
         </div>
