--- a/index.html
+++ b/index.html
@@ -119,6 +119,19 @@
             <p>Un proceso de exocitosis ocasionará la liberación del virus y éste será capaz de ir e infectar a otras células de la misma manera, repitiéndose el ciclo viral (Yan-Rong et al.).</code>
 
              <p>*La presencia de errores de la RdRp durante la replicación de la cadena de RNA podría generar material genético no precisamente idéntico al del virus. </code>
+         <h1>BIBLIOGRAFÍA</h1>
+         <body style=”text-align: justify;”>
+            <p> </code>  
+    <p>1.  Ali, R.; Shamsah, A.; Shafiul, H.; Ranjit, S.; Ruchi, T.; Yashpal, M.; Kuldeep, D.; Iqbal, Y.; Bonilla-Aldana, K. & Rodríguez-Morales, A. SARS-CoV-2, SARS-CoV, and MERS-CoV: a comparative overview. Infez. Med., 2:174-84, 2020.</code>  
+  <p>2.  Mousavizadeh, L. & Ghasemi, S. Genotype and phenotype of COVID-19: Their roles in pathogenesis. Mousavizadeh L, Ghasemi S, Genotype and phenotype of COVID-19: Their roles in pathogenesis. J. Microbiol. Immunol. Infec., 2020. DOI: https://www.doi.org/10.1016/j.jmii.2020.03.022</code>  
+<p>3.  Pastrian-Soto, Gabriel. (2020). Bases Genéticas y Moleculares del COVID-19 (SARS-CoV-2). Mecanismos de Patogénesis y de Respuesta Inmune. International journal of odontostomatology, 14(3), 331-337. https://dx.doi.org/10.4067/S0718-381X2020000300331 </code>  
+<p>4.  Chen, Y.; Liu, Q. & Guo, D. Emerging coronaviruses: Genome structure, replication, and pathogenesis. J. Med. Virol., 92:41823, 2020. </code>  
+<p>5.  Sin-Yee, F.; Kit-San, Y.; Zi-Wei, Y.; Chi-Ping, C. & Dong-Yan, J. A tug-of-war between severe acute respiratory syndrome coronavirus 2 and host antiviral defence: lessons from other pathogenic viruses. Emerg. Microb. Infect., 9:1558-70, 2020. </code>  
+<p>6.  Yan-Rong, G.; Qing-Dong, C.; Zhong-Si, H.; Yuan-Yang, T.; ShouDeng, C.; Hong-Jun, J.; Kai-Sen, T.; De-Yun, W. & Yan, Y. The origin, transmission and clinical therapies on coronavirus disease 2019 (COVID 19) outbreak - an update on the status. Mil. Med. Res., 7:11, 2020.  </code>  
+<p>7.  Rokni, M.; Ghasemi, V. & Tavakoli, Z. Immune responses and pathogenesis of SARS-CoV-2 during an outbreak in Iran: Comparison with SARS and MERS. Rev. Med. Virol., 1-6, 2020 </code>  
+<p>8.  Dae-Gyun, A.; Hye-Jin, S.; Mi-Hwa, K.; Sunhee, L.; Hae-Soo, K.; Jinjong, M.; Bum-Tae, K. & Seong-Jun, K. Current Status of Epidemiology, Diagnosis, Therapeutics, and Vaccines for Novel Coronavirus Disease 2019 (COVID-19). J. Microbiol. Biotechnol., 30(3):313-24, 2020. </code>  
+<p>9.  Qingmei, H.; Qingqing, L.; Shenhe J. & Liangshun, Y. Coronavirus 2019-nCoV: A brief perspective from the front line. J. Infect., 80:373-7, 2020. </code>  
+    
           file.</p>
           file.</p>
       </div>
