--- a/index.html
+++ b/index.html
@@ -131,16 +131,14 @@
 <p>7.  Rokni, M.; Ghasemi, V. & Tavakoli, Z. Immune responses and pathogenesis of SARS-CoV-2 during an outbreak in Iran: Comparison with SARS and MERS. Rev. Med. Virol., 1-6, 2020 </code>  
 <p>8.  Dae-Gyun, A.; Hye-Jin, S.; Mi-Hwa, K.; Sunhee, L.; Hae-Soo, K.; Jinjong, M.; Bum-Tae, K. & Seong-Jun, K. Current Status of Epidemiology, Diagnosis, Therapeutics, and Vaccines for Novel Coronavirus Disease 2019 (COVID-19). J. Microbiol. Biotechnol., 30(3):313-24, 2020. </code>  
 <p>9.  Qingmei, H.; Qingqing, L.; Shenhe J. & Liangshun, Y. Coronavirus 2019-nCoV: A brief perspective from the front line. J. Infect., 80:373-7, 2020. </code>  
-    
-          file.</p>
-          file.</p>
+
       </div>
     </section>
 
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">CdCMx: Martínez Gallardo R.,Nil Huerta, K., Osorio Cruz, A.</p>
+        <p class="m-0 text-center text-white">Autores: Martínez Gallardo R.,Nil Huerta, K., Osorio Cruz, A.</p>
       </div>
       <!-- /.container -->
     </footer>
