--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="carousel-item" style="background-image: url('https://health.mil/-/media/Images/MHS/Photos/COVIDgenome.ashx?h=407&la=en&mw=720&w=720&hash=9B1C103F610084A80E73CED933395BDCBFDFDDFF62A799929C9C8AD2C34DE975')">
             <div class="carousel-caption d-none d-md-block">
               <h3>La comunidad científica</h3>
-              <p>Comprometida con el estudio de este virus para llevar a la resolución de este problema mundial de salud pública.</p>
+              <p>Comprometida con el estudio de este virus para llevar a la resolución de este problema global de salud pública.</p>
             </div>
           </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
