--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
             <p>Un proceso de exocitosis ocasionará la liberación del virus y éste será capaz de ir e infectar a otras células de la misma manera, repitiéndose el ciclo viral (Yan-Rong et al.).</code>
 
              <p>*La presencia de errores de la RdRp durante la replicación de la cadena de RNA podría generar material genético no precisamente idéntico al del virus. </code>
+          <h1>Colaboradores:
+         <body style=”text-align: justify;”>
+            <p>Si quieres saber más sobre la relación entre proteínas y virus, no dudes en visitar: https://alejandrord98.github.io/NetworkBiology-C18/</code>
          <h1>BIBLIOGRAFÍA</h1>
          <body style=”text-align: justify;”>
             <p> </code>  
