--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="carousel-item" style="background-image: url('https://health.mil/-/media/Images/MHS/Photos/COVIDgenome.ashx?h=407&la=en&mw=720&w=720&hash=9B1C103F610084A80E73CED933395BDCBFDFDDFF62A799929C9C8AD2C34DE975')">
             <div class="carousel-caption d-none d-md-block">
               <h3>La comunidad científica</h3>
-              <p>Comprometida con el estudio de este virus para llevar a la resolución de este problema global de salud pública.</p>
+              <p>Comprometida con el estudio de este virus para llevar a la resolución de este problema global de salud pública</p>
             </div>
           </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
@@ -84,7 +84,7 @@
     <section class="py-5">
       <div class="container">
         <h1>CICLO VIRAL DEL SARS-CoV-2</h1>
-        <p> <img src="BRCV19.png" width="1100" height="750" /> </code>
+        <p> <img src="BR final.png" width="1100" height="750" /> </code>
         <h1>1.	Entrada del virus a la célula hospedera</h1>
         <body style=”text-align: justify;”>
             <p>Para que el virus complete la entrada en la célula hospedera, la proteína (S) debe ser cortada o escindida por una enzima proteasa (TMPRRS2). 
