--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Challenge CdCMx 2020: Proyecto final
+              <a class="nav-link" href="#">Challenge CdeCMx 2020: Proyecto final
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -122,6 +122,10 @@
           <h1>Colaboradores:</h1>
          <body style=”text-align: justify;”>
             <p>Si quieres saber más sobre la relación entre proteínas y virus, no dudes visitar: https://alejandrord98.github.io/NetworkBiology-C18/</code>
+         <h1>Agradecimientos:</h1>
+         <body style=”text-align: justify;”>
+            <p>Gracias a todo el equipo de Clubes de Ciencia México que nos ha impulsado a la realización de este trabajo para seguir creando ciencia. (CdeCMX)/</code>
+         <p> <img src="logo.png" width="1100" height="750" /> </code>
          <h1>BIBLIOGRAFÍA</h1>
          <body style=”text-align: justify;”>
             <p> </code>  
