--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <p>Si quieres saber más sobre la relación entre proteínas y virus, no dudes visitar: https://alejandrord98.github.io/NetworkBiology-C18/</code>
          <h1>Agradecimientos:</h1>
          <body style=”text-align: justify;”>
-            <p>Gracias a todo el equipo de Clubes de Ciencia México que nos ha impulsado a la realización de este trabajo para seguir creando ciencia. (CdeCMX)/</code>
+            <p>Gracias a todo el equipo de Clubes de Ciencia México (CdeCMX) que nos ha impulsado a la realización de este trabajo para seguir creando y difundiendo la ciencia. </code>
          <p> <img src="logo.png" width="1100" height="750" /> </code>
          <h1>BIBLIOGRAFÍA</h1>
          <body style=”text-align: justify;”>
